<resources>
    <string name="app_name">Shopenator</string>
    <string name="action_settings">Settings</string>

    <!--Main Activity Strings -->
    <string name="empty_list">No items added yet.</string>


    <!-- Barcode Capture Strings-->
    <string name="barcode_activity_label">Read Barcode</string>
    <string name="ok">OK</string>
    <string name="alert_dialoge_label">Barcode Scanner</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This Barcode scanner cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Barcode dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="tap_directions">Tap to capture. Pinch/Stretch to zoom</string>
    <string name="title_activity_add_item">AddItemActivity</string>

    <!-- AddNew Strings-->
    <string name="title_add_new">Add</string>
    <string name="scan_button">scan</string>
    <string name="submit_button">Look Up</string>
    <string name="input_hint">Enter UPC Digits.</string>
    <string name="description_hint">Enter description here: </string>
    <string name="notes_hint">Enter Notes here: </string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="wish_list_button">Add to Wish List</string>
    <string name="itemSaved">\u0020Saved to Shopenator.</string>
    <string name="detailItemRemoved">Item removed from Shopenator.</string>
    <string name="detailItemUpdated">Updates saved to Shopenator.</string>

    <!-- AddNew EditText hint strings-->
    <string name="NoTitle">Enter Product Name:</string>
    <string name="NoByline">Enter the byline.</string>
    <string name="NoDate">Enter release year Ex: 2012</string>
    <string name="NoStore">Enter Store: </string>
    <string name="NoImage">Type valid URL for image</string>

    <!-- A11Y Strings -->
    <string name="barcode_scan_button">Scan Barcode Button</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
