<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/user_input"
    android:layout_below="@+id/details"
    android:paddingBottom="@dimen/activity_horizontal_margin">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/description"
        android:inputType="textMultiLine"
        android:minEms="@integer/min_upc_input_width"
        android:minLines="@integer/notes_input_min_lines"
        android:minHeight="?attr/actionBarSize"
        android:focusable="true"
        android:gravity="start"
        android:hint="@string/description_hint"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/store_input_padding" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/notes"
        android:inputType="textMultiLine"
        android:minLines="@integer/notes_input_min_lines"
        android:minEms="@integer/min_upc_input_width"
        android:focusable="true"
        android:gravity="start"
        android:hint="@string/notes_hint"
        android:layout_marginTop="4dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/notes_input_padding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">

        <Button

            android:id="@+id/saveButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/save_button"
            android:textSize="18sp"/>

        <Button

            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="?attr/actionBarSize"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/delete_button"
            android:textSize="18sp"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>