<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="?attr/actionBarSize"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddNewFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_add_new"
        android:layout_marginBottom="@dimen/app_bar_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        tools:context="com.enrandomlabs.jasensanders.v1.shopenator.AddNewFragment">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/error"
            android:visibility="gone"
            android:gravity="center"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/error"
            android:id="@+id/inputContainer"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:id="@+id/inputTextContainer"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_container_margin"
                android:gravity="center_horizontal">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:minEms="@integer/min_upc_input_width"
                    android:layout_weight="4"
                    android:id="@+id/upc"
                    android:saveEnabled="true"
                    android:maxLength="@integer/upc_input_text_size"
                    android:maxLines="@integer/input_max_lines"
                    android:hint="@string/input_hint"
                    android:focusable="true"
                    android:paddingEnd="@dimen/input_editText_padding"/>

                <Button
                    android:id="@+id/scan_button"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/scan_button_height"
                    android:layout_weight="2"
                    android:background="@drawable/button_border"
                    android:contentDescription="@string/barcode_scan_button"
                    android:drawablePadding="@dimen/scan_button_drawable_padding"
                    android:drawableStart="@drawable/ic_barcode_scan_black"
                    android:focusable="true"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:text="@string/scan_button"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <Button
                android:id="@+id/submit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_button"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/save_cancel_button_margin"/>

        </LinearLayout>


        <ProgressBar
            android:id="@+id/ProgressBarWait"
            style="@android:style/Widget.DeviceDefault.ProgressBar.Large"
            android:layout_below="@id/inputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:visibility="gone"
            android:indeterminate="true"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id ="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/inputContainer"
            android:focusable="true"
            style="@style/Base.Theme.AppCompat.Light"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/artView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/art_image_height"
                    android:layout_gravity="center_horizontal"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:src="@drawable/gears_placeholder2"
                    android:scaleType="centerCrop"/>

                <TextView android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_alignStart="@id/artView"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:background="@drawable/background_fade"
                    android:text="Tap to change image"
                    android:textSize="20sp"/>
            </RelativeLayout>


            <EditText  android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:id="@+id/add_view_Title"
                android:hint="@string/NoTitle"
                android:focusable="true"
                android:inputType="textCapCharacters"
                android:fontFamily="sans-serif-condensed"
                android:textSize="@dimen/title_text_size" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/upcDisplay"
                android:visibility="gone"/>

            <View android:id="@+id/divider" style="@style/Divider" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/activity_horizontal_margin">
            <EditText
                android:id="@+id/store"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/NoStore"
                android:focusable="true"
                android:layout_weight="2" />
            <EditText
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:hint="Enter Price"/>
            </LinearLayout>

            <EditText
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Website Link:"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:focusable="true"/>

        </LinearLayout>

        <include layout="@layout/content_user_input" />



    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>